[workspace.package]
version = "8.5.0"
authors = ["Aventus systems team"]
homepage = "https://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-node-parachain/"
edition = "2021"
rust-version = "1.85.0"

[workspace]
resolver = "2"
members = [
    "node",
    "node/primitives",
    "client/*",
    "pallets/*",
    "pallets/*/runtime-api",
    "primitives/*",
    "runtime/*",
]

[workspace.dependencies]
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
jsonrpsee = { version = "0.24.3", features = ["server"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
futures = "0.3.30"
anyhow = "1.0.64"
clap = { version = "4.5.3", features = ["derive"] }
smallvec = "1.11.0"
docify = "0.2.8"
parking_lot = { version = "0.12.3" }

# Polkadot dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
substrate-wasm-builder = { version = "24.0.1", default-features = false }
# Substrate
frame = { version = "0.7.0", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-benchmarking-cli = { version = "43.0.0", default-features = false }
frame-election-provider-support = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-aura = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false, features = ["insecure_zero_ed"] }
pallet-message-queue = { version = "41.0.0", default-features = false }
pallet-session = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-blockchain= { version = "37.0.1", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-staking = { version = "36.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }

pallet-assets = { version = "40.0.0", default-features = false }
sp-authority-discovery = { version = "34.0.0", default-features = false }
pallet-authority-discovery = { version = "38.0.0", default-features = false }
pallet-offences = { version = "37.0.0", default-features = false }
pallet-im-online = { version = "37.0.0", default-features = false }
pallet-utility = { version = "38.0.0", default-features = false }
pallet-referenda = { version = "38.0.0", default-features = false }
pallet-conviction-voting = { version = "38.0.0", default-features = false }
pallet-whitelist = { version = "37.0.0", default-features = false }
pallet-scheduler = { version = "39.0.0", default-features = false }
pallet-preimage = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
sc-basic-authorship = { version = "0.45.0", default-features = false }
sc-chain-spec = { version = "38.0.0", default-features = false }
sc-cli = { version = "0.47.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.44.0", default-features = false }
sc-executor = { version = "0.40.1", default-features = false }
sc-keystore = { version = "33.0.0", default-features = false }
sc-network = { version = "0.45.0", default-features = false }
sc-network-common = { version = "0.44.0", default-features = false }
sc-network-sync = { version = "0.44.0", default-features = false }
sc-offchain = { version = "40.0.0", default-features = false }
sc-rpc = { version = "40.0.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-sysinfo = { version = "38.0.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-tracing = { version = "37.0.1", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sc-client-db = { version = "0.44.0", default-features = false }

substrate-frame-rpc-system = { version = "39.0.0", default-features = false }
substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "17.0.0", default-features = false }
polkadot-cli = { version = "19.0.0", default-features = false }
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-runtime-common = { version = "17.0.0", default-features = false }
polkadot-service = { version = "19.0.0", default-features = false }
xcm = { version = "14.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "17.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "17.0.0", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.18.0", default-features = false }
cumulus-client-collator = { version = "0.18.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.18.0", default-features = false }
cumulus-client-consensus-common = { version = "0.18.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.16.0", default-features = false }
cumulus-client-network = { version = "0.18.0", default-features = false }
cumulus-client-service = { version = "0.19.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.16.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.18.0", default-features = false }

cumulus-pallet-aura-ext = { version = "0.17.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.17.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "19.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.17.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.17.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
cumulus-primitives-core = { version = "0.16.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.16.0", default-features = false }
cumulus-primitives-utility = { version = "0.17.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "8.0.0", default-features = false }
parachain-info = { version = "0.17.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "18.0.0", default-features = false }

# AvN pallets
sp-avn-common = { path = "./primitives/avn-common", default-features = false }
sp-watchtower = { path = "./primitives/watchtower", default-features = false }
pallet-avn-offence-handler = { path = "./pallets/avn-offence-handler", default-features = false }
pallet-validators-manager = { path = "./pallets/validators-manager", default-features = false }
pallet-ethereum-events = { path = "./pallets/ethereum-events", default-features = false }
pallet-avn = { path = "./pallets/avn", default-features = false }
pallet-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-summary = { path = "./pallets/summary", default-features = false }
pallet-token-manager = { path = "./pallets/token-manager", default-features = false }
pallet-nft-manager = { path = "./pallets/nft-manager", default-features = false }
pallet-avn-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-avn-transaction-payment = { path = "./pallets/avn-transaction-payment", default-features = false }
pallet-eth-bridge = { path = "./pallets/eth-bridge", default-features = false }
pallet-eth-bridge-runtime-api = { path = "./pallets/eth-bridge/runtime-api", default-features = false }
pallet-parachain-staking = { path = "./pallets/parachain-staking", default-features = false }
pallet-avn-anchor = { path = "./pallets/avn-anchor", default-features = false }

# Common Runtime
node-primitives = { path = "./node/primitives/", default-features = false }
runtime-common = { package = "avn-runtime-common", path = "./runtime/common", default-features = false }
avn-parachain-runtime = { path = "./runtime/avn/", default-features = false }
avn-test-runtime = { package = "avn-parachain-test-runtime", path = "./runtime/test/", default-features = false }

client-extrinsic-utils = { path = "./client/extrinsic-utils" }
external-service = { path = "./client/external-service" }
cli-commands = { path = "./client/cli-commands" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

